# Snake_Game-SDL2

./: .gitignore  CMakeLists.txt  Linked.c  Linked.h  README.md  game.c  game.h
fonts/: font license.txt
