CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
PROJECT(snake LANGUAGES C)

SET(CMAKE_C_STANDARD 11)
IF(UNIX)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -Wall -no-pie")
ENDIF(UNIX)
IF(WIN32)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -Wall -mwindow")
ADD_DEFINITIONS(-DMY_ROOT_DIR="${CMAKE_SOURCE_DIR}")
ENDIF(WIN32)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

FILE(GLOB SRC_FILES "${CMAKE_SOURCE_DIR}/*.c")

IF(WIN32)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_SOURCE_DIR}/bin/Debug")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/bin/Release")

IF(NOT EXISTS "${CMAKE_SOURCE_DIR}/bin")
FILE(MAKE_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
ENDIF()

IF(NOT EXISTS "${CMAKE_SOURCE_DIR}/bin/Debug")
FILE(MAKE_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/Debug")
ENDIF()

IF(NOT EXISTS "${CMAKE_SOURCE_DIR}/bin/Release")
FILE(MAKE_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/Release")
ENDIF()

IF(NOT EXISTS ${CMAKE_SOURCE_DIR}/external/external.zip)
EXECUTE_PROCESS(
    COMMAND git pull origin master
)
ENDIF()

IF(NOT EXISTS "${CMAKE_SOURCE_DIR}/external/SDL2")
EXECUTE_PROCESS(
    COMMAND tar -xf ${CMAKE_SOURCE_DIR}/external/external.zip -C ${CMAKE_SOURCE_DIR}/external
)
ENDIF()

IF(NOT EXISTS "${CMAKE_SOURCE_DIR}/bin/Debug/SDL2.dll")
EXECUTE_PROCESS(
    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/external/SDL2/bin/SDL2.dll ${CMAKE_SOURCE_DIR}/bin/Debug
)
ENDIF()

IF(NOT EXISTS "${CMAKE_SOURCE_DIR}/bin/Release/SDL2.dll")
EXECUTE_PROCESS(
    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/external/SDL2/bin/SDL2.dll ${CMAKE_SOURCE_DIR}/bin/Release
)
ENDIF()

IF(NOT EXISTS "${CMAKE_SOURCE_DIR}/bin/Debug/SDL2_ttf.dll")
EXECUTE_PROCESS(
    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/external/SDL2_ttf/bin/SDL2_ttf.dll ${CMAKE_SOURCE_DIR}/bin/Debug
)
ENDIF()

IF(NOT EXISTS "${CMAKE_SOURCE_DIR}/bin/Release/SDL2_ttf.dll")
EXECUTE_PROCESS(
    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/external/SDL2_ttf/bin/SDL2_ttf.dll ${CMAKE_SOURCE_DIR}/bin/Release
)
ENDIF()

IF(NOT EXISTS "${CMAKE_SOURCE_DIR}/bin/Debug/zlib1.dll")
EXECUTE_PROCESS(
    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/external/SDL2_ttf/bin/zlib1.dll ${CMAKE_SOURCE_DIR}/bin/Debug
)
ENDIF()

IF(NOT EXISTS "${CMAKE_SOURCE_DIR}/bin/Release/zlib1.dll")
EXECUTE_PROCESS(
    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/external/SDL2_ttf/bin/zlib1.dll ${CMAKE_SOURCE_DIR}/bin/Release
)
ENDIF()

IF(NOT EXISTS "${CMAKE_SOURCE_DIR}/bin/Debug/libfreetype-6.dll")
EXECUTE_PROCESS(
    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/external/SDL2_ttf/bin/libfreetype-6.dll ${CMAKE_SOURCE_DIR}/bin/Debug
)
ENDIF()

IF(NOT EXISTS "${CMAKE_SOURCE_DIR}/bin/Release/libfreetype-6.dll")
EXECUTE_PROCESS(
    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/external/SDL2_ttf/bin/libfreetype-6.dll ${CMAKE_SOURCE_DIR}/bin/Release
)
ENDIF()

INCLUDE_DIRECTORIES(
    "${CMAKE_SOURCE_DIR}"
    "${CMAKE_SOURCE_DIR}/external/SDL2/include"
    "${CMAKE_SOURCE_DIR}/external/SDL2_ttf/include"
)

LINK_DIRECTORIES(
    "${CMAKE_SOURCE_DIR}/external/SDL2/lib"
    "${CMAKE_SOURCE_DIR}/external/SDL2_ttf/lib"
)

ENDIF(WIN32)

IF(UNIX)
INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2TTF REQUIRED SDL2_ttf)

INCLUDE_DIRECTORIES(
    "${CMAKE_SOURCE_DIR}"
    "${SDL2_INCLUDE_DIRS}"
    "${SDL2TTF_INCLUDE_DIRS}"
)
ENDIF(UNIX)

ADD_EXECUTABLE(run ${SRC_FILES})

IF(UNIX)
TARGET_LINK_LIBRARIES(run
    "${SDL2_LIBRARIES}"
    "${SDL2TTF_LIBRARIES}"
)
ENDIF(UNIX)

IF(WIN32)
TARGET_LINK_LIBRARIES(run
    SDL2main
    SDL2
    SDL2_ttf
)
ENDIF(WIN32)